<resources>

    <string name="app_name">Health control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="new_entry">New entry</string>
    <string name="save_entry">Save entry</string>
    <string name="diastolic_pressure">Diastolic pressure</string>
    <string name="pulse">Pulse</string>
    <string name="temperature">Temperature</string>
    <string name="glucose">Glucose</string>
    <string name="systolic_pressure">Systolic pressure</string>

    <string name="add_record">Добавить запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="date_time">Date time</string>
    <string name="overall_health">Overall\nhealth</string>
    <string name="value">Value</string>
    <string name="legend">Legend</string>

</resources>
