<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/systolic_pressure"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diastolic_pressure"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pulse"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/np_systolic_pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:id="@+id/np_diastolic_pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:id="@+id/np_pulse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>

</LinearLayout>
